--- a/package.json
+++ b/package.json
@@ -3,12 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "apollo-boost": "^0.4.9",
+    "axios": "^0.21.4",
+    "classnames": "^2.3.1",
+    "dotenv": "^10.0.0",
+    "graphql": "^15.5.3",
+    "hamburger-react": "^2.4.1",
+    "hookrouter": "^1.2.5",
+    "ityped": "^1.0.3",
+    "markdown-to-jsx": "^7.1.3",
+    "moment": "^2.29.1",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-animate-height": "^2.0.23",
+    "react-apollo": "^3.1.5",
     "react-dom": "^17.0.2",
+    "react-lottie": "^1.2.3",
+    "react-moment": "^1.1.1",
+    "react-parallax": "^3.3.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-useanimations": "^2.0.6",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -34,5 +53,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.6",
+    "babel-loader": "^8.1.0",
+    "webpack": "^4.44.2"
   }
 }
